@@ -1,5 +1,11 @@
 2007-12-31  Wakaba  <wakaba@suika.fam.cx>
 
+	* Parser.pm: Ignore property which is not supported by the
+	application.  Support for properties with a keyword being
+	able to be specified is added.
+
+2007-12-31  Wakaba  <wakaba@suika.fam.cx>
+
 	* Parser.pm: At-keywords were not case-insensitive.
 	Support for property value parsing.  Empty declarations
 	were not supported.  Raise errors for broken declarations.
